--- a/Mango.Web/Views/Cart/CartIndex.cshtml
+++ b/Mango.Web/Views/Cart/CartIndex.cshtml
@@ -1,5 +1,5 @@
 ﻿@model CartDto
-
+@if(Model.CartHeader!=null && Model.CartDetails?.Count()>0){
 <form method="post">
     <br />
     <input asp-for="CartHeader.UserId" hidden />
@@ -92,4 +92,11 @@
             </div>
         </div>
     </div>
-</form>
+    </form>
+}
+else
+{
+    <div>
+        <p>Please add items to the cart</p>
+    </div>
+}
